crates/hydracache-db/tests/derive/fail_missing_entity.rs
use hydracache_db::HydraCacheEntity;

#[derive(HydraCacheEntity)]
#[hydracache(id = i64)]
struct User;

fn main() {}
